vote and dummy data
